--- a/lk.ijse.pos_system/index.html
+++ b/lk.ijse.pos_system/index.html
@@ -198,7 +198,7 @@
                 <form>
                     <div class="mb-3">
                         <label for="orderId" class="form-label">Order Id</label>
-                        <input type="number" class="form-control" id="orderId">
+                        <input type="text" class="form-control" id="orderId">
                     </div>
                     <div class="mb-3">
                         <label for="orderDate" class="form-label">Order Date</label>
@@ -206,7 +206,9 @@
                     </div>
                     <div class="mb-3">
                         <label for="orderCustomerId" class="form-label">Customer Id</label>
-                        <input type="text" class="form-control" id="orderCustomerId">
+                        <select class="form-select" aria-label="Default select example" id="orderCustomerId">
+                            <option selected>Select the customer</option>
+                        </select>
                     </div>
                     <div class="mb-3">
                         <label for="orderCustomerName" class="form-label">Customer Name</label>
@@ -252,7 +254,9 @@
                     <form id="itemSelect">
                         <div class="mb-3">
                             <label for="itemCode" class="form-label">Item Code</label>
-                            <input type="number" class="form-control" id="itemCode">
+                            <select class="form-select" aria-label="Default select example" id="itemCode">
+                                <option selected>Select the item</option>
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="itemDescription" class="form-label">Item Description</label>
@@ -340,10 +344,12 @@
 <script src="assets/lib/bootstrap-5.3.1-dist/js/jquery_min.js"></script>
 <script src="assets/lib/bootstrap-5.3.1-dist/js/bootstrap.min.js"></script>
 <script src="assets/js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.32/dist/sweetalert2.all.min.js"></script>
 
 <!--link Controllers-->
 <script type="module" src="controller/CustomerController.js"></script>
 <script type="module" src="controller/ItemController.js"></script>
+<script type="module" src="controller/OrderController.js"></script>
 
 </body>
 </html>
